[package]
name = "bevy_viewcube"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_mod_picking = { git = "https://github.com/Donvlouss/bevy_mod_picking.git" }
bevy_panorbit_camera = { git = "https://github.com/Donvlouss/bevy_panorbit_camera.git" }